[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/mouse.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "left",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "right",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 7.0

[sub_resource type="CircleShape2D" id=7]
radius = 8.0

[sub_resource type="CircleShape2D" id=8]
radius = 100.0

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "die"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="player" type="KinematicBody2D" groups=["player"]]
pause_mode = 1
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
pause_mode = 2
frames = SubResource( 5 )
animation = "left"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="BombArea" type="Area2D" parent="."]
pause_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="BombArea"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 9 )
anims/die = SubResource( 10 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="BombArea" to="." method="_on_BombArea_body_entered"]
[connection signal="body_exited" from="BombArea" to="." method="_on_BombArea_body_exited"]
